--- a/views/book_form.pug
+++ b/views/book_form.pug
@@ -27,8 +27,8 @@ block content
       div
         for genre in genres
           div(style='display: inline; padding-right:10px;')
-            input.checkbox-input(type='checkbox', name='genre', id=genre._id, value=genre._id, checked=genre.checked )
-            label(for=genre._id) #{genre.name}
+            input.checkbox-input(type='checkbox', name='genre', id=genre._id, value=genre._id, checked=genre.checked style="margin-right:2px") 
+            label(for=genre._id)  #{ genre.name}
     button.btn.btn-primary(type='submit') Submit
 
   if errors
